--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,13 @@ services:
     env: python
     region: frankfurt
     plan: starter
-    buildCommand: pip install -r requirements.txt
+    runtime: python3.11.5
+    buildCommand: |
+      python -m pip install --upgrade pip && 
+      pip install -r requirements.txt
     startCommand: python bot.py
     envVars:
       - key: DISCORD_BOT_TOKEN
         sync: false
       - key: API_BASE_URL
-        value: https://your-api-url.vercel.app
+        sync: false
